crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/EventDefinition/no_parens/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Semicolon. One of OpenParen was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/EventDefinition/no_parens/input.generated.sol:4:14]
   │
 4 │ event MyEvent;
   │              ┬  
   │              ╰── Error occurred here.
───╯
